--- a/Content/index.html
+++ b/Content/index.html
@@ -1,1 +1,1 @@
-Все пасты можно найти тут -> https://sashaad13.github.io/CopyPasta/page/ <- meow SmokeTime
+Все пасты можно найти тут -> https://melomanchik322.github.io/CopyPasta/page/ <- meow SmokeTime
